# StreamingInstability_YJ14

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
StreamingInstability_YJ14/: analysis.py  compute_opacities.py  disk_model.py  mass_calculations.py  optical_depth.py  radiative_transfer.py  self_gravity.py  shearing_box.py  test_run.py
StreamingInstability_YJ14.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
StreamingInstability_YJ14/data/: a_max_opacities.txt  a_single_opacities.txt  a_single_opacities_1.txt  all_wavelengths.txt
docs/: conf.py  index.rst
docs/_templates/: layout.html
docs/source/: Analysis.rst  Figures 2 & 3 - Simulations.rst  Figures 4 & 5 - Frequency-dependent Dust Opacities.rst  Godines et al 2025 - Figures.rst  Godines et al 2025.rst  Hydrodynamical Simulations of the Streaming Instability.rst  Mass Budget Problem in Protoplanetary Disks.rst  Mass Excess Analysis.rst  Streaming Instability.rst
protoRT/: __init__.py  compute_opacities.py  rtcube.py
protoRT/data/: all_grain_sizes.txt  kappa_abs.npy  kappa_sca.npy
